--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,7 +33,7 @@ img{vertical-align: bottom;}
 
 html{
     scroll-behavior: smooth;
-    scroll-padding: 80px;
+    /* scroll-padding: 80px; */
     font-size: 15px;
     --ff:Poppins,sans-serif;
 }
@@ -73,6 +73,7 @@ header{background: linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
 .wrap-1{ padding: 1.5rem 0.5rem;}
 .wrap-1 h1{font: 700 2rem var(--ff); color: #f8f9fa; text-align: center;}
 nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
+.wrap-1 button{display: none;}
 
 .wrap-2{padding: 100px 0 45px; }
 .wrap-2 .banner h3 {font: 700 100px var(--ff);  line-height: 160px; color: #f8f9fa;}
@@ -98,30 +99,54 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
 .wrap-5 a,address{font: 300 18px var(--ff); color: #343a40; line-height: 35px;}
 .wrap-5 .box{ padding: 30px 0; box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;}
 
-.wrap-6{padding: 50px 0;}
+.wrap-6{padding: 50px 0; overflow: hidden;}
 .wrap-6 h2{text-align: center; font: 500 2rem var(--ff); margin-bottom: 3rem; color: #06beb6;}
-.wrap-6 .vl{border-right: 2px solid #06beb6; height: 142px;position: relative; z-index: 2;}
-.wrap-6 .spna1 {position: absolute; right: -13px; top: 65px; color: #06beb6; font-size: 25px;}
-.wrap-6 .v2{border-right: 2px solid #06beb6; height: 130px;position: relative; z-index: 2;}
-.wrap-6 .spna2 {position: absolute; right: -13px; top: 50px; color: #06beb6; font-size: 25px;}
-.wrap-6 .v3{border-right: 2px solid #06beb6; height: 130px;position: relative; z-index: 2;}
-.wrap-6 .spna3 {position: absolute; right: -13px; top: 50px; color: #06beb6; font-size: 25px;}
-.wrap-6 .v4{border-right: 2px solid #06beb6; height: 130px;position: relative; z-index: 2;}
-.wrap-6 .spna4 {position: absolute; right: -13px; top: 50px; color: #06beb6; font-size: 25px;}
+.wrap-6 .pos{padding: 10px 40px; position: relative;}
+.wrap-6 .box1{padding: 20px 30px; position: relative; box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
 .wrap-6 .box1 h3{font: 600 18px var(--ff); color: #343a40;}
 .wrap-6 .box1 h4{font: 500 17px var(--ff); padding: 10px 0; color: #414141;}
 .wrap-6 .box1 p{font: 400 17px var(--ff); color: #797979;}
-.wrap-6 .box1{padding: 20px; box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
+.left-pos{left: 0;}
+.right-pos{left: 100%;}
+.wrap-6  span.fa-regular{font-size: 25px; color: #06beb6; position: absolute; z-index: 10;right: -22px; top: 32px;}
+.wrap-6 .right-pos span.fa-regular{left: -3px;}
+.wrap-6 .col-6{position: relative;}
+.vertical-line::after{
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 100%;
+    background: #06beb6;
+    top: 0px;
+    left: 100%;
+    z-index: -1;
+    margin-left: -8px;
+}
+.left-arrow{position: absolute; top: 28px; z-index: 1; right: -10px; color: #06beb6;}
+.right-arrow{position: absolute; top: 28px; z-index: 1; left: -10px; color: #06beb6;}
+
 
 .wrap-7{padding: 50px 0; text-align: center;}
 .wrap-7 h2{font: 500 2rem var(--ff); margin-bottom: 3rem; color: #06beb6;}
 .wrap-7 span{font-size: 3.5rem; border: 2px solid #06beb6; padding: 1rem; color: #06beb6;}
 .wrap-7 h3{font: 600 20px var(--ff); padding: 12px; color: #343a40;}
-.wrap-7 p{font: 400 17px var(--ff); margin-bottom: 20px; color: #797979;}
+.wrap-7 p{font: 400 16px var(--ff); margin-bottom: 20px; color: #797979;}
 .wrap-7 a{color: #06beb6; border-bottom: 1px solid #06beb6;}
 .wrap-7 .ser{ padding: 25px; margin-bottom: 4rem; border: 2px solid #06beb6; box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
 
 .wrap-8{padding: 50px 0; text-align: center;}
+.wrap-8 .pro1{background: url("../Image/Project1.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro1:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro2{background: url("../Image/Project2.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro2:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro3{background: url("../Image/Project3.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro3:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro4{background: url("../Image/Project4.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro4:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro5{background: url("../Image/Project5.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro5:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro6{background: url("../Image/Project6.png") no-repeat top/cover; width: 100%; height: 300px; transition: all ease-in-out 5s;}
+.wrap-8 .pro6:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
 .wrap-8 h2{font: 500 2rem var(--ff); margin-bottom: 1rem; color: #06beb6;}
 .wrap-8 p{font: 400 17px var(--ff); margin-bottom: 20px; color: #f8f9fa;}
 .wrap-8 .para{color: #414141;}
@@ -129,9 +154,8 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
 .wrap-8 .btns li{margin-right: 15px;}
 .wrap-8 .btns li a{padding: 10px 20px; border: 1px solid #06beb6; border-radius: 50px; display: inline-block; color: #06beb6;}
 .wrap-8 .btns li a:hover{background: #06beb6; color: #f8f9fa;}
-.wrap-8 .card{position: relative; overflow: hidden;}
-.wrap-8 img{max-width: 100%; height: auto; margin: 15px 0;}
-.wrap-8 .details{position: absolute; inset: 0;  background: #06beb6;  color: #f8f9fa; margin: 15px 0; transform: scale(1,0); transition: all 500ms ease 0s;}
+.wrap-8 .card{position: relative; margin-bottom: 20px;}
+.wrap-8 .details{position: absolute; inset: 0;  background: rgb(6, 190, 182,0.6);  color: #f8f9fa; margin: 15px 0; transform: scale(1,0); transition: all 500ms ease 0s;}
 .wrap-8 .card:hover .details{transform: none;}
 .wrap-8 h3{font: 500 18px var(--ff); padding: 80px 0 10px;}
 .wrap-8 .dbtn a{border-radius: 25px; margin: 0 0 15px 0; padding: 10px 20px; display: inline-block; background: #f8f9fa; color: #06beb6;}
@@ -149,7 +173,7 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
 
 /* responsive */
 @media screen and (max-width:1220px){
-    
+    nav ul li a{font: 500 18px var(--ff); padding: 8px;}
 }
 @media screen and (max-width:980px){
     .col-t-1{ flex-basis:8.33%; max-width: 8.33%;}
@@ -165,6 +189,15 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
     .col-t-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-t-12{ flex-basis:100%; max-width: 100%;}
 
+    .wrap-1 button{display: block; float: right; background: #06beb6; border: none;}
+    .wrap-1 .toggle span{display:block; width: 30px; height: 4px; background: #f8f9fa; margin: 4px;}
+    .wrap-1 .collapse{display: none; position: absolute; left: 0; right: 0; top: 55px; padding: 15px; background: #48b1bf;}
+    .wrap-1 .collapse ul{flex-flow: column wrap; float: right;}
+    .wrap-1 .collapse ul li{text-align: right; margin-bottom: 8px; padding: 5px 0;}
+
+    .wrap-2 .banner h3 {font: 700 70px var(--ff);  line-height: 110px;}
+    .wrap-5 a,address{font: 300 15px var(--ff); line-height: 30px;}
+    .wrap-7 .ser {padding: 10px;}
 }
 @media screen and (max-width:767px){
     html{ font-size: 12px;}
@@ -181,6 +214,19 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
     .col-m-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-m-12{ flex-basis:100%; max-width: 100%;}
 
+    .wrap-5 .box {margin-bottom: 30px;}
+    .wrap-8 ul{overflow: auto;}
+    .vertical-line{margin: 15px auto;}
+    .wrap-6 .pos {padding: 10px 10px 10px 45px;}
+    .wrap-6 .box1{padding: 20px 22px;}
+    .vertical-line::after{left: 30px;}
+    .right-pos{left: 2px;}
+    .wrap-6  span.fa-regular{left: -1px;}
+    .wrap-6 .right-pos span.fa-regular{left: -1px;}
+    .left-arrow{left: -10px;}
+    .right-arrow{left: -10px;}
+    .wrap-9 .contact {font: 500 18px var(--ff);}
+    
 }
 @media screen and (max-width:460px){
     .col-p-1{ flex-basis:8.33%; max-width: 8.33%;}
@@ -195,6 +241,9 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
     .col-p-10{ flex-basis:83.33%; max-width: 83.33%;}
     .col-p-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis:100%; max-width: 100%;}
+    
+    #orders{order: 1; margin-top: 20px; text-align: center;}
+    .wrap-5 a, address {padding: 20px;}
     
 }
 @media screen and (max-width:359px){
