--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,6 +73,7 @@ header{background: linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
 .wrap-1{ padding: 1.5rem 0.5rem;}
 .wrap-1 h1{font: 700 2rem var(--ff); color: #f8f9fa; text-align: center;}
 nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
+nav ul li a:hover{color: #414141;}
 .wrap-1 button{display: none;}
 
 .wrap-2{padding: 100px 0 45px; }
@@ -147,6 +148,8 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
 .wrap-8 .pro5:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
 .wrap-8 .pro6{background: url("../Image/Project6.png") no-repeat top/cover; width: 100%; height: 400px; transition: all ease-in-out 5s;}
 .wrap-8 .pro6:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
+.wrap-8 .pro7{background: url("../Image/Project7.png") no-repeat top/cover; width: 100%; height: 400px; transition: all ease-in-out 5s;}
+.wrap-8 .pro7:hover:hover{background-position-y: bottom; transition: all ease-in-out 5s;}
 .wrap-8 h2{font: 500 2rem var(--ff); margin-bottom: 1rem; color: #06beb6;}
 .wrap-8 p{font: 400 17px var(--ff); color: #414141; padding: 0 0 20px 0;}
 .wrap-8 .btns{margin: 50px 0;}
@@ -242,6 +245,7 @@ nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
     .col-p-12{ flex-basis:100%; max-width: 100%;}
     
     #orders{order: 1; margin-top: 20px; text-align: center;}
+    .wrap-2 .center{text-align: center;}
     .wrap-5 a, address {padding: 20px;}
     
 }
