--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,7 +77,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-1 button{display: none;}
 
 .wrap-2{padding: 100px 0 45px; }
-.wrap-2 .banner h2{color: #fff; font: 500 47px var(--ff);}
+.wrap-2 .banner h2{color: #fff; font: 500 3rem var(--ff);}
 .wrap-2 .banner h3 {font: 700 100px var(--ff); color: #06beb6; -webkit-text-stroke: 2px #ffffff;}
 .wrap-2 .banner h4{color: #fff; font: 400 25px var(--ff);}
 .wrap-2 a{width: 215px; height: 70px; color: #06beb6; display: inline-block; background: #f8f9fa; font: 500 20px var(--ff); padding: 20px; margin: 50px 20px 0 0; text-align: center;}
@@ -86,7 +86,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-3 h2{text-align: center; font: 500 2rem var(--ff); margin-bottom: 3rem;}
 .wrap-3 h3{font: 600 2rem var(--ff); color: #343a40;}
 .wrap-3 h4{font: 400 1.5rem var(--ff); margin-bottom: 1rem; color: #343a40;}
-.wrap-3 p{font:400 18px var(--ff); line-height: 30px; color: #6c757d;}
+.wrap-3 p{font:400 18px var(--ff); line-height: 30px; color: #4e5459;}
 .wrap-3 img{max-width: 100%; height: auto;}
 
 .wrap-4{padding: 40px 0;}
@@ -106,7 +106,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-6 .box1{padding: 20px 30px; position: relative; box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
 .wrap-6 .box1 h3{font: 600 18px var(--ff); color: #343a40;}
 .wrap-6 .box1 h4{font: 500 17px var(--ff); padding: 10px 0; color: #414141;}
-.wrap-6 .box1 p{font: 400 17px var(--ff); color: #797979;}
+.wrap-6 .box1 p{font: 400 17px var(--ff); color: #727171;}
 .left-pos{left: 0;}
 .right-pos{left: 100%;}
 .wrap-6  span.fa-regular{font-size: 25px; color: #06beb6; position: absolute; z-index: 10;right: -22px; top: 32px;}
@@ -131,7 +131,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-7 h2{font: 500 2rem var(--ff); margin-bottom: 3rem; color: #06beb6;}
 .wrap-7 span{font-size: 3.5rem; border: 2px solid #06beb6; padding: 1rem; color: #06beb6;}
 .wrap-7 h3{font: 600 20px var(--ff); padding: 12px; color: #343a40;}
-.wrap-7 p{font: 400 16px var(--ff); margin-bottom: 20px; color: #797979;}
+.wrap-7 p{font: 400 16px var(--ff); margin-bottom: 20px; color: #727171;}
 .wrap-7 a{color: #06beb6; border-bottom: 1px solid #06beb6;}
 .wrap-7 .ser{ padding: 25px; margin-bottom: 4rem; border: 2px solid #06beb6; box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
 
@@ -165,7 +165,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-9{padding: 30px 0; text-align: center;}
 .wrap-9 h2{font: 500 2rem var(--ff); margin-bottom: 1rem; color: #06beb6;}
 .wrap-9 .contact{font: 500 20px var(--ff); line-height: 30px; color: #343a40;}
-.wrap-9 .contact a{color: #06beb6;}
+.wrap-9 .contact a{color: #06beb6; text-decoration: none;}
 .wrap-9 .social a{width: 50px; height: 50px; display: inline-block; border: 2px solid #06beb6; border-radius: 50%; display: grid; place-items: center; margin: 5px; font-size: 22px; color: #06beb6;}
 .wrap-9 .pic img{max-width: 100%; height: auto;}
 
