--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,16 +67,18 @@ body{
 .justify-space-bet{justify-content: space-between;}
 .justify-center{justify-content: center;}
 .align-center{align-items: center;}
+.fixed{position: fixed;}
 
 /* Custom CSS */
-header{background: linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
-.wrap-1{ padding: 1.5rem 0.5rem;}
+header{position: sticky; z-index: 100; top: 0;}
+.wrap-1{ padding: 1.5rem 0.5rem; background:linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
+.bgcolor{background:linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
 .wrap-1 h1{font: 700 2rem var(--ff); color: #f8f9fa; text-align: center;}
 nav ul li a{color: #fff; font: 500 20px var(--ff); padding: 10px;}
 nav ul li a:hover{color: #414141;}
 .wrap-1 button{display: none;}
 
-.wrap-2{padding: 100px 0 45px; }
+.wrap-2{padding: 100px 0 45px; background: linear-gradient(90deg, #06beb6 0%, #48b1bf 100%);}
 .wrap-2 .banner h2{color: #fff; font: 500 3rem var(--ff);}
 .wrap-2 .banner h3 {font: 700 100px var(--ff); color: #06beb6; -webkit-text-stroke: 2px #ffffff;}
 .wrap-2 .banner h4{color: #fff; font: 400 25px var(--ff);}
@@ -90,9 +92,48 @@ nav ul li a:hover{color: #414141;}
 .wrap-3 img{max-width: 100%; height: auto;}
 
 .wrap-4{padding: 40px 0;}
-.wrap-4 h3{font: 600 20px var(--ff); color: #000000d1;}
 .wrap-4 h2{text-align: center; font: 500 2rem var(--ff); margin-bottom: 3rem; color: #06beb6;}
-.wrap-4 progress{width: 100%; height: 10px; margin-bottom: 20px; background-image: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);}
+.wrap-4 h3{font: 600 20px var(--ff); color: #000000d1; margin: 15px 0;}
+.wrap-4 .progress-bar{background: #727171; width: 570px; height: 10px; border-radius: 5px; margin: 10px 0 10px 0;}
+.wrap-4 .progress-bar div{width: 0%; height: 10px; border-radius: 5px; background:#06beb6;}
+.wrap-4 .progress-bar div span{float: right; width: 40px; height: 40px; border-radius: 50%; background: #48b1bf; color: #fff; margin-top: -15px; margin-right: -20px;  display: grid; place-items: center; }
+.wrap-4 .html{animation: html 1s linear forwards;}
+.wrap-4 .css{animation: css 1s linear forwards;}
+.wrap-4 .boot{animation: boot 1s linear forwards;}
+.wrap-4 .js{animation: js 1s linear forwards;}
+.wrap-4 .jquery{animation: jquery 1s linear forwards;}
+.wrap-4 .react{animation: react 1s linear forwards;}
+@keyframes html {
+    100%{
+        width: 86%;
+    }
+}
+@keyframes css {
+    100%{
+        width: 76%;
+    }
+}
+@keyframes boot {
+    100%{
+        width: 56%;
+    }
+}
+@keyframes js {
+    100%{
+        width: 60%;
+    }
+}
+@keyframes jquery {
+    100%{
+        width: 65%;
+    }
+}
+@keyframes react {
+    100%{
+        width: 56%;
+    }
+}
+
 
 .wrap-5{padding: 40px 0;  text-align: center; background: #d3d3d340;}
 .wrap-5 .circle{width: 60px; height: 60px; border: 2px solid #fff; border-radius: 50%; display: grid; place-items: center; margin: 10px 0; font-size: 2rem; background: #06beb6; color: #f8f9fa;}
