--- a/CSS/style.css
+++ b/CSS/style.css
@@ -283,7 +283,7 @@ nav ul li a:hover{color: #414141;}
     .wrap-6 .right-pos span.fa-regular{left: -1px;}
     .left-arrow{left: -10px;}
     .right-arrow{left: -10px;}
-    .wrap-9 .contact {font: 500 18px var(--ff);}
+    .wrap-9 .contact {font: 500 18px var(--ff); padding: 10px;}
     
 }
 @media screen and (max-width:460px){
@@ -300,12 +300,13 @@ nav ul li a:hover{color: #414141;}
     .col-p-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis:100%; max-width: 100%;}
     
-    #orders{order: 1; margin-top: 20px; text-align: center;}
-    .wrap-2 .center{text-align: center;}
+    #orders{order: 1; margin-top: 20px; text-align: center; }
+    .wrap-2 .center{text-align: center; display: inline-block;}
     .wrap-5 a, address {padding: 20px;}
     .wrap-4 .progress-bar{width: 350px;}
-
-    
+    .wrap-2{padding-top: 50px;}
+    #change{order: -1; padding: 0 0 50px 0;}  
+    .wrap-9 .addr {margin-top: 0rem;}  
 }
 @media screen and (max-width:359px){
     
