--- a/CSS/style.css
+++ b/CSS/style.css
@@ -284,7 +284,13 @@ nav ul li a:hover{color: #414141;}
     .left-arrow{left: -10px;}
     .right-arrow{left: -10px;}
     .wrap-9 .contact {font: 500 18px var(--ff); padding: 10px;}
-    
+
+    .wrap-2 .center{text-align: center; display: inline-block;}
+    .wrap-2{padding-top: 50px;}
+    #change{order: -1; padding: 0 0 50px 0;}  
+    #orders{order: 1; margin-top: 20px; text-align: center; }
+
+
 }
 @media screen and (max-width:460px){
     .col-p-1{ flex-basis:8.33%; max-width: 8.33%;}
@@ -300,12 +306,12 @@ nav ul li a:hover{color: #414141;}
     .col-p-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis:100%; max-width: 100%;}
     
-    #orders{order: 1; margin-top: 20px; text-align: center; }
-    .wrap-2 .center{text-align: center; display: inline-block;}
+    /* #orders{order: 1; margin-top: 20px; text-align: center; } */
+    /* .wrap-2 .center{text-align: center; display: inline-block;} */
     .wrap-5 a, address {padding: 20px;}
     .wrap-4 .progress-bar{width: 350px;}
-    .wrap-2{padding-top: 50px;}
-    #change{order: -1; padding: 0 0 50px 0;}  
+    /* .wrap-2{padding-top: 50px;} */
+    /* #change{order: -1; padding: 0 0 50px 0;}   */
     .wrap-9 .addr {margin-top: 0rem;}  
     .wrap-9 address{font: 300 18px var(--ff); color: #343a40; line-height: 35px;}
 
