--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ nav ul li a:hover{color: #414141;}
 .wrap-2 .banner h4{color: #fff; font: 400 25px var(--ff);}
 .wrap-2 a{width: 215px; height: 70px; color: #06beb6; display: inline-block; background: #f8f9fa; font: 500 20px var(--ff); padding: 20px; margin: 50px 20px 0 0; text-align: center;}
 .wrap-2 .img {text-align: center; margin-top: 2rem;}
-.wrap-2 img{max-width: 100%; height: auto; border-radius: 10px; }
+.wrap-2 img{max-width: 100%; width: 400px; height: 400px; border-radius: 50%; object-fit: cover; }
 
 .wrap-3{padding: 80px 0; color: #06beb6; background: #f8f9fa;}
 .wrap-3 h2{text-align: center; font: 500 2rem var(--ff); margin-bottom: 3rem;}
@@ -303,6 +303,7 @@ nav ul li a:hover{color: #414141;}
     .col-p-11{ flex-basis:91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis:100%; max-width: 100%;}
     
+    .wrap-2 img{width: 340px; height: 340px;}
     .wrap-5 a, address {padding: 20px;}
     .wrap-4 .progress-bar{width: 350px;}
     .wrap-9 .addr {margin-top: 0rem;}  
